# process-anomaly-detection

./: .gitignore  PLAN.md  README.md  pyproject.toml  requirements.txt  testoutput.txt
anomaly_detection_model/: README.md  pyproject.toml  requirements.txt
anomaly_detection_model/model/: __init__.py  __main__.py  artifact.py  featurize.py  paths.py  score.py  train.py  vocab.py
anomaly_detection_model/tests/: conftest.py  factories.py  test_featurize.py  test_model.py  test_vocab.py
process_monitor/: README.md  pyproject.toml
process_monitor/process_monitor/: __init__.py  __main__.py  monitor.py  render.py  store.py  terminal.py
process_stream/: README.md  enrich.py  etw_source.py  features.py  hashing.py  peinfo.py  pyproject.toml  signing.py  tokeninfo.py
process_stream/process_stream/: __init__.py  __main__.py  _debug.py  backfill.py  emit.py  filecache.py  normalize.py  record.py
