[project]
name = "anomaly-detection-model"
version = "0.1.0"
description = "Unsupervised anomaly detection over process-start NDJSON streams."
requires-python = ">=3.9"
dependencies = [
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "joblib>=1.3",
]

[project.scripts]
anomaly-detection-model = "model.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["model"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
