[project]
name = "process-monitor"
version = "0.1.0"
description = "Live full-screen terminal monitor that ranks scored process starts by anomaly score."
requires-python = ">=3.9"
# Pure standard library (ANSI escape sequences + ctypes on Windows): no
# third-party runtime dependencies, matching the lightweight ethos of the
# sibling subprojects.
dependencies = []

[project.scripts]
process-monitor = "process_monitor.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["process_monitor"]
