[project]
name = "process-stream"
version = "0.1.0"
description = "Lightweight real-time NDJSON stream of Windows process starts for anomaly detection."
requires-python = ">=3.9"
dependencies = [
    "pywintrace>=0.2.0",
    "psutil>=5.9",
    "pywin32>=305",
]

[project.scripts]
process-stream = "process_stream.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["process_stream"]
